--- a/src/expressjs/pages/home/index.html
+++ b/src/expressjs/pages/home/index.html
@@ -23,14 +23,6 @@
     <link href="output.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <script type="text/javascript" src="https://unpkg.com/vis-network/standalone/umd/vis-network.min.js"></script>
-    <style type="text/css">
-      #diagram {
-        width: 800px;
-        height: 400px;
-        border: 1px solid lightgray;
-      }
-    </style>
   </head>
 
   <!-- Header bar -->
@@ -298,28 +290,29 @@
       </p>
     </div>
 
-
     <div class="grid grid-cols-1 mt-12 text-center sm:mt-16 gap-x-20 gap-y-12 sm:grid-cols-2 lg:grid-cols-3">
       <div class="reveal space-y-4">
-        <span class="bg-gray-100 text-gray-900 shadow-md text-xs font-medium inline-flex items-center px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-gray-300">
-          Amazon Inc.
-        </span>
-        <h3 class="text-2xl font-bold leading-tight text-gray-900 dark:text-white">
-          Streamline
-        </h3>
-        <p class="text-lg font-normal text-gray-500 dark:text-gray-400">
-          Streamline is an Amazon-internal web application built entirely using Python, based on the Streamlit framework.
-        </p>
-        <div class="flex w-full flex-items-center justify-center">
-          <img class="h-10 w-10 inline-block mr-2" src="assets/svgs/icons8-python.svg" alt="Python">
-          <img class="h-10 w-10 inline-block mr-2 rounded-full" src="assets/svgs/aws-icon-services.svg" alt="AWS Services">
-        </div>
-        <button type="button" href="#streamline" class="text-white animate-pulse bg-gradient-to-r from-blue-500 via-blue-600
-         to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg
+          <span class="bg-gray-100 text-gray-900 shadow-md text-xs font-medium inline-flex items-center px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-gray-300">
+              Amazon Inc.
+          </span>
+          <h3 class="text-2xl font-bold leading-tight text-gray-900 dark:text-white">
+              Streamline
+          </h3>
+          <p class="text-lg font-normal text-gray-500 dark:text-gray-400">
+              Streamline is an Amazon-internal web application built entirely using Python, based on the Streamlit framework.
+          </p>
+          <div class="flex w-full flex-items-center justify-center">
+              <img class="h-10 w-10 inline-block mr-2" src="assets/svgs/icons8-python.svg" alt="Python">
+              <img class="h-10 w-10 inline-block mr-2 rounded-full" src="assets/svgs/aws-icon-services.svg" alt="AWS Services">
+          </div>
+          <button type="button" href="#streamline" class="text-white animate-pulse bg-gradient-to-r from-blue-500 via-blue-600
+          to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg
           shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2" onclick="goToPage()">
-          Read more
-        </button>
+              Read more
+          </button>
       </div>
+
+
 
       <div id="resume" class="reveal space-y-4">
         <span
@@ -406,11 +399,11 @@
         </span>
           </li>
           <li class="flex items-center" id="tech-logos">
-            <img class="w-8 h-8 mr-5 inline-block p-1 rounded-full slide-in-1" src="assets/svgs/express-svgrepo-com.svg" alt="ExpressJS" style="background-color: white;">
-            <img class="w-8 h-8 mr-5 inline-block rounded-full slide-in-2" src="assets/svgs/node-js-svgrepo-com.svg" alt="NodeJS">
-            <img class="w-8 h-8 mr-5 inline-block rounded-full slide-in-3" src="assets/svgs/tailwind-css-icon.svg" alt="Tailwind">
-            <img class="w-8 h-8 mr-5 inline-block rounded-full slide-in-4" src="assets/svgs/firebase-icon.svg" alt="Firebase">
-            <img class="w-8 h-8 inline-block rounded-full slide-in-5" src="assets/svgs/icons8-mongodb.svg" alt="Mongo">
+            <img data-animate data-delay="0s" class="w-8 h-8 mr-5 inline-block p-1 rounded-full opacity-0" src="assets/svgs/express-svgrepo-com.svg" alt="ExpressJS" style="background-color: white;">
+            <img data-animate data-delay="0.2s" class="w-8 h-8 mr-5 inline-block rounded-full opacity-0" src="assets/svgs/node-js-svgrepo-com.svg" alt="NodeJS">
+            <img data-animate data-delay="0.4s" class="w-8 h-8 mr-5 inline-block rounded-full opacity-0" src="assets/svgs/tailwind-css-icon.svg" alt="Tailwind">
+            <img data-animate data-delay="0.6s" class="w-8 h-8 mr-5 inline-block rounded-full opacity-0" src="assets/svgs/firebase-icon.svg" alt="Firebase">
+            <img data-animate data-delay="0.8s" class="w-8 h-8 inline-block rounded-full opacity-0" src="assets/svgs/icons8-mongodb.svg" alt="Mongo">
           </li>
       </ul>
   </div>
@@ -455,9 +448,9 @@
         </div>
     </div>
     <ul class="list-disc ml-6 mb-4 text-gray-500 dark:text-gray-400">
-      <li>This project taught me a lot about UI/UX design and creating an engaging user experience, which was a new skill for me considering my background in backend-focused tech.</li>
-      <li>I learned about the simplicity of creating a CI/CD pipeline using Google's Firebase and Github Actions.</li>
-      <li>I learned how to test frontend code, specifically using Cypress for component and E2E testing.</li>
+      <li class="mb-2">This project taught me a lot about UI/UX design and creating an engaging user experience, which was a new skill for me considering my background in backend-focused tech.</li>
+      <li class="mb-2">I learned about the simplicity of creating a CI/CD pipeline using Google's Firebase and Github Actions.</li>
+      <li class="mb-2">I learned how to test frontend code, specifically using Cypress for component and E2E testing.</li>
       <li>Integrating dark and light mode compatibility was extremely simple with Tailwind, allowing my project to be accessible for those during the day as well as at night!</li>
     </ul>
   </div>
@@ -495,11 +488,11 @@
         v0.0.1
       </span>
           <li class="flex items-center">
-            <img class="w-8 h-8 mr-5 inline-block  rounded-full" src="assets/svgs/icons8-python.svg" alt="Python" title="Python">
-            <img class="w-8 h-8 mr-5 inline-block  rounded-full" src="assets/svgs/streamlit.svg" alt="Streamlit" title="Streamlit">
-            <img class="w-8 h-8 mr-5 inline-block" src="assets/svgs/typescript-svgrepo-com (1).svg" alt="Typescript" title="Typescript">
-            <img class="w-8 h-8 mr-5 inline-block" src="assets/svgs/aws-icon-services.svg" alt="AWS" title="AWS">
-            <img class="w-8 h-8 mr-1.5 inline-block p-1 rounded-full" src="assets/svgs/terraform-icon-svgrepo-com.svg" alt="Terraform" title="Terraform" style="background-color: white;">
+            <img data-animate data-delay="0s" class="w-8 h-8 mr-5 inline-block rounded-full opacity-0" src="assets/svgs/icons8-python.svg" alt="Python" title="Python">
+            <img data-animate data-delay="0.2s" class="w-8 h-8 mr-5 inline-block rounded-full opacity-0" src="assets/svgs/streamlit.svg" alt="Streamlit" title="Streamlit">
+            <img data-animate data-delay="0.4s" class="w-8 h-8 mr-5 inline-block opacity-0" src="assets/svgs/typescript-svgrepo-com (1).svg" alt="Typescript" title="Typescript">
+            <img data-animate data-delay="0.6s" class="w-8 h-8 mr-5 inline-block opacity-0" src="assets/svgs/aws-icon-services.svg" alt="AWS" title="AWS">
+            <img data-animate data-delay="0.8s" class="w-8 h-8 mr-1.5 inline-block p-1 rounded-full opacity-0" src="assets/svgs/terraform-icon-svgrepo-com.svg" alt="Terraform" title="Terraform" style="background-color: white;">
           </li>
       </ul>
   </div>
@@ -515,11 +508,8 @@
           various operational processes. Streamline can perform various tasks, the most popular being it's
           crunching of ticket data, which previously done manually would take around 15-20 mins each day.
           Streamline's ticket crunching algorithm meant that technicians no longer needed to manually count ticket numbers,
-          Streamline does this calculation automatically by leveraging Python's pandas libary
-          provides an approx <span class="font-bold">boost in time effiency of ~150% </span> compared to the
-          old way where we had to manually pull the data.
+          Streamline does this calculation automatically by leveraging Python's pandas libary.
       </li>
-
       <li class="">
         Streamline's release inspired me to create a community for data centre staff within AWS who have a passion for development.
         These individuals are natural problem-solvers and want to utilize their development skills to increase the efficiency of operating data centres.
@@ -541,9 +531,12 @@
   </div>
   <ul class="list-disc ml-6 mb-8 text-gray-500 dark:text-gray-400">
     <li class="mb-2">
-      Streamline is a web application developed entirely in Python; based on the <a href="https://streamlit.io/" class="underline text-blue-400">Streamlit</a> web framework. Streamlit
-      abstracts a lot of the complexities of the backend from me so I can focus on writing the Python code that makes up the application.
-      Under the hood, streamlit uses WebSockets to enable real-time updates and low latency, Streamlit can also manage widget states on the frontend and syncs the states
+      Streamline is a web application developed entirely in Python; based on the
+       <a href="https://streamlit.io/" class="underline text-blue-400">Streamlit</a> web framework. Streamlit
+      abstracts a lot of the complexities of the backend from me so I can focus on writing
+       the Python code that makes up the application.
+      Under the hood, streamlit uses WebSockets to enable real-time updates and low latency,
+       Streamlit can also manage widget states on the frontend and syncs the states
       automatically to the backend.
     </li>
 
@@ -554,11 +547,13 @@
     </li>
 
     <li class="mb-2">
-      Streamline is a fully-redundant, secure, and performant web application hosted entirely using AWS services. It is hosted on auto-scaled EC2 instances spread across three AZs and served by an Application Load Balancer (ALB).
+      Streamline is a fully-redundant, secure, and performant web application hosted entirely using AWS services.
+       It is hosted on auto-scaled EC2 instances spread across three AZs and served by an Application Load Balancer (ALB).
       Streamline's unique domain name uses Route53 for fast and reliable DNS resolution, and CloudWatch for monitoring the EC2 instances.
     </li>
     <li>
-      For CI/CD, I am also using AWS services, namely CodePipeline, CodeBuild, and AWS's code repository, CodeCommit. I am using an S3 bucket to store a copy of my git repository which my ec2 instances read from when I make a commit
+      For CI/CD, I am also using AWS services, namely CodePipeline, CodeBuild, and AWS's code repository, CodeCommit.
+       I am using an S3 bucket to store a copy of my git repository which my ec2 instances read from when I make a commit
       to my main branch.
     </li>
     <li>
@@ -570,10 +565,17 @@
       </div>
   </div>
   <ul class="list-disc ml-6 mb-4 text-gray-500 dark:text-gray-400">
-    <li>This project taught me a lot about UI/UX design and creating an engaging user experience, which was a new skill for me considering my background in backend-focused tech.</li>
-    <li>I learned about the simplicity of creating a CI/CD pipeline using Google's Firebase and Github Actions.</li>
-    <li>I learned how to test frontend code, specifically using Cypress for component and E2E testing.</li>
-    <li>Integrating dark and light mode compatibility was extremely simple with Tailwind, allowing my project to be accessible for those during the day as well as at night!</li>
+    <li class="mb-2">The outcome of the project was a fully functional platform for data centre staff to use, the feedback I have received from colleagues was all very positive and the project has been a success so far while
+      Streamline continues to be an organic project.
+    </li>
+    <li class="mb-2">
+      Streamline saw a significant boost in DCO efficiency, Streamline's algorithm meant that ticket-data crunching now only took ~1 minute (which includes the time it takes to get the csv data and runtime), compared
+      to the manual way which took ~15 minutes to complete;<span class="font-bold"> a significant increase in time-spent effiency of ~1400%.</span>
+    </li>
+    <li class="mb-2">I learned about the utility of TMUX and how it can boost developer producitivity.</li>
+    <li>Throughout my development of my CI/CD pipeline for Streamline, I picked up some familiarity with Typescript as well as
+      some of the services AWS offers to build pipelines.
+    </li>
   </ul>
 </div>
 </article>
@@ -632,11 +634,35 @@
 </footer>
   <!-- Placed at the end of the document so the pages load faster -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script type="text/javascript" src="diagram/streamline.js"></script>
   <script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
   <script defer src="index.js"></script>
-  <script src="firebase/firebase_init.js"></script>
   <script src="scroll.js"></script>
   <script src="bottom_banner.js"></script>
-  </body>
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      const animatedElements = document.querySelectorAll("[data-animate]");
+
+      const observer = new IntersectionObserver(
+        (entries) => {
+          entries.forEach((entry) => {
+            if (entry.isIntersecting) {
+              entry.target.classList.add("visible");
+              observer.unobserve(entry.target);
+            }
+          });
+        },
+        {
+          threshold: 0.5,
+        }
+      );
+
+      animatedElements.forEach((element) => {
+        const delay = element.getAttribute("data-delay");
+        element.style.transitionDelay = delay;
+        element.classList.add("animate");
+        observer.observe(element);
+      });
+    });
+  </script>
+</body>
 </html>
